--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'com.google.dagger.hilt.android'
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -71,4 +74,11 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:6.0.0"
+
+    //Google Auth
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
